Bug 820541 - Only call ProcessRemovedDisplayItems once per transaction. r=roc